@@ -31,7 +31,6 @@ import org.apache.kafka.streams.state.StoreBuilder;
 import org.apache.kafka.streams.state.ValueTimestampHeaders;
 import org.apache.kafka.streams.state.internals.KeyValueStoreWrapper;
 
-import java.util.Collections;
 import java.util.Set;
 
 import static org.apache.kafka.streams.state.ValueTimestampHeaders.getValueOrNull;
@@ -69,7 +68,7 @@ public class KTableAggregate<KIn, VIn, VAgg> implements
 
     @Override
     public Set<StoreBuilder<?>> stores() {
-        return Collections.singleton(new FactoryWrappingStoreBuilder<>(storeFactory));
+        return Set.of(new FactoryWrappingStoreBuilder<>(storeFactory));
     }
 
     @Override
